working on loggin

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ bollard = "0.19.1"
 tokio = { version = "1.46.1", features = ["full"] }
 trust-dns-proto = "0.23.2"
 futures-util = "0.3"
+log = "0.4.27"
