--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,12 @@ name = "woodns"
 version = "2.0.0"
 edition = "2024"
 
+[profile.release]
+lto="fat"
+codegen-units=1
+panic="abort"
+strip=true
+
 [dependencies]
 anyhow = "1.0.98"
 bollard = "0.19.1"
